--- a/css/styles.css
+++ b/css/styles.css
@@ -4187,7 +4187,7 @@ textarea.form-control-lg {
   --bs-card-cap-color: ;
   --bs-card-height: ;
   --bs-card-color: ;
-  --bs-card-bg: #fff;
+  --bs-card-bg: #ffffff;
   --bs-card-img-overlay-padding: 1rem;
   --bs-card-group-margin: 0.75rem;
   position: relative;
@@ -7518,6 +7518,7 @@ textarea.form-control-lg {
 
 .m-0 {
   margin: 0 !important;
+  
 }
 
 .m-1 {
@@ -10876,6 +10877,12 @@ margin: 2em 2em;
     }
     .secundario__imagem{
       margin: 50vw;
+    }
+
+    .insta{
+      min-width: 21px;
+      max-width: 118px;
+
     }
 
 }
